# Nexus-AITech-NEXUSA

./: .dockerignore  .env.example  .gitattributes  .gitignore  .launch_junit.xml  Caddyfile  Dockerfile  Dockerfile-minio  LAUNCHCHECK.json  LICENSE  README.md  caddy.compose.yaml  clickhouse_nexusa_schema.sql  config.yaml  docker-compose.prod.yaml  docker-compose.yaml  gitleaks.toml  gitleaks_report.json  launch_readiness_check.py  main.py  nginx.conf  package-lock.json  package.json  pyproject.toml  readiness_report.md  requirements.txt  rules.json  run_readiness_check.bat  symbols_seed.sql  ws_fetcher.py
adapters/: base.py  binance.py  bingx.py  bitget.py  bybit.py  coinex.py  kucoin.py  okx.py
backtesting/: __init__.py  backtesting_engine.py  config_hashing.py  contract_tester.py  metrics.py  runner.py
core/: __init__.py  kafka_consumer.py  kafka_producer.py  ml_model.py  observability.py
core/config/: __init__.py  config.py  loader.py  models.py
core/logging/: __init__.py  logger.py
core/schema/: __init__.py  feature_schema.py  ingest_schema.py  signal_schema.py
core/utils/: __init__.py  time_utils.py
docs/architecture/: diagrams.mmd
docs/content/: lesson1.md
features/: __init__.py  feature_builder.py  feature_engine.py  feature_store.py  quality_control.py  state_manager.py
features/indicators/: __init__.py  adx.py  atr.py  ichimoku.py  obv.py  stochastic_rsi.py  vwap.py
infra/docker/: assessment.Dockerfile  community.Dockerfile  content.Dockerfile  docker-compose.yml  (+3 more)
ingestion/: Dockerfile  __init__.py  ingestion_manager.py  metrics.py  replay_engine.py  rest_fetcher.py  websocket_consumer.py
orchestration/: __init__.py  fastapi_server.py  orchestrator.py  service_mesh_hooks.py  websocket_streamer.py  ws_hub.py
prisma/: schema.prisma
reports/: __init__.py  llm_generator.py  localization.py  prompt_templates.py  rag_retriever.py  schema_guard.py
services/: __init__.py
signals/: __init__.py  final_scorer.py  model_runner.py  rationale_mapper.py  registry.py  risk_controller.py  rule_engine.py  signal_emitter.py
ssl/: nexus-aitech_net.p7b
storage/: __init__.py  partition_manager.py  redis_cache.py  s3_archiver.py  schema_registry.py  tsdb_reader.py  tsdb_writer.py
ui/: __init__.py  telemetry.py
webapp/: .gitignore  Caddyfile  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.js  tsconfig.json  vercel.json
ws-gateway/: index.js  package-lock.json  package.json  server.js
(+245 files in other folders)
